<resources>
    <string name="app_name">WeatherApp</string>
    <string name="choose_city"><u>Choose city</u></string>
    <string name="address">Simferopol</string>
    <string name="current_date">28 January 2020, 10:36 AM</string>
    <string name="sky_description">Clear Sky</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">06:40 AM</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">06:40 AM</string>
    <string name="wind">Wind</string>
    <string name="error_text">Something went wrong.\n Please, check connection to internet.</string>
    <string name="wind_speed">0 м/с</string>
    <string name="min_temp">min temp: 0 °C</string>
    <string name="max_temp">max temp: 1 °C</string>
    <string name="temp">-15 °C</string>
    <string name="date">01.02.2021</string>
    <string name="title">Please, choose city to display the weather</string>
    <string name="update_weather">update weather</string>
    <string name="feels_like">feels like: 10 °C</string>
    <string name="turn_on_gps">For displaying a weather in your city, please, turn on gps</string>
    <string name="give_location_permission">For displaying a weather in your city,
        please, give a location permission</string>
    <string name="wait_please">Please, wait, until gps finds you</string>
    <string name="find_my_city"><u>Find my city</u></string>
    <string name="loading_data">Loading data...</string>
    <string-array name="cities">
        <item>Tokyo</item>
        <item>Moscow</item>
        <item>San Francisco</item>
        <item>Vladivostok</item>
        <item>Durban</item>
    </string-array>
</resources>