<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/dark_gradient_background">
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/changeCityLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_city"
                android:textSize="15sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/updatedAtTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:textSize="14sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="135dp"
                android:layout_height="135dp" />
        </LinearLayout>

        <LinearLayout android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/skyDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/sky_description"/>
            <Space
                android:layout_height="20dp"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/temp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/feelsLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"/>
            <Space
                android:layout_height="10dp"
                android:layout_width="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/tempMinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"/>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tempMaxTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"/>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/updateWeatherButton"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="#F81837E4"
                android:text="@string/update_weather"
                android:textSize="10sp"
                app:backgroundTint="#6E72FC
" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_sunrise"
                        />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sunrise"/>
                    <TextView
                        android:id="@+id/sunriseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/sunrise_time"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_sunset"
                        />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sunset"/>
                    <TextView
                        android:id="@+id/sunsetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/sunset_time"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_wind"
                        />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/wind"/>
                    <TextView
                        android:id="@+id/windTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/wind_speed"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>


        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loaderProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/errorTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/error_text"
        android:gravity="center"/>
</RelativeLayout>
